<?xml version="1.0" encoding="utf-8"?>

<!--Copyright (c) 2009 Jack Twilley <mathuin@gmail.com>-->
<!---->
<!--Permission is hereby granted, free of charge, to any person obtaining a copy-->
<!--of this software and associated documentation files (the "Software"), to deal-->
<!--in the Software without restriction, including without limitation the rights-->
<!--to use, copy, modify, merge, publish, distribute, sublicense, and/or sell-->
<!--copies of the Software, and to permit persons to whom the Software is-->
<!--furnished to do so, subject to the following conditions:-->
<!---->
<!--The above copyright notice and this permission notice shall be included in-->
<!--all copies or substantial portions of the Software.-->
<!---->
<!--THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR-->
<!--IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,-->
<!--FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE-->
<!--AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER-->
<!--LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,-->
<!--OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN-->
<!--THE SOFTWARE.-->

<resources>
	<string name="app_name">HFBeacon</string>
	<string name="bandLabel">Band</string>
	<string name="clockLabel">Clock</string>
	<string name="locationLabel">Location</string>
	<string name="latitudeLabel">Latitude</string>
	<string name="longitudeLabel">Longitude</string>
	<string name="maidenheadLabel">Grid Square</string>
	<string name="pastLabel">Past</string>
	<string name="presentLabel">Present</string>
	<string name="futureLabel">Future</string>
	<string name="callsignLabel">Callsign</string>
	<string name="regionLabel">Region</string>
	<string name="bearingLabel">Bearing</string>
	<string name="rangeLabel">Range (km)</string>
	<string name="menu_info">Info</string>
	<string name="about_title">About</string>
	<string name="about_body">"by Jack Twilley -- mathuin@gmail.com\n\nNew!  Maidenhead locator system support has been added.  The current grid square is displayed with the latitude and longitude.\n\nHFBeacon is a simple application which informs the user which HF propagation beacon is transmitting at the present time.  Beacon information was collected from <a href="http://www.ncdxf.org/beacons.html">http://www.ncdxf.org/beacons.html</a>.\n\nHFBeacon is open source software released under the MIT License.\n"</string>
	<string name="about_dismiss_button">OK</string>
	<string name="waiting_title">Waiting For Position</string>
	<string name="waiting_body">Ranges and bearings will be displayed as soon as the application retrieves your current position.\n\nShould be just a moment!</string>
	<string name="waiting_dismiss_button">OK</string>
	<string name="locationdisabled_title">Location Disabled</string>
	<string name="locationdisabled_body">To use HFBeacon, you must first turn on a Location source in Settings.  Go to Settings and turn it on now?</string>
	<string name="locationdisabled_positive_button">OK</string>
	<string name="locationdisabled_negative_button">Cancel</string>
</resources>